--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "PointedSDMs"]
+	path = PointedSDMs
+	url = https://github.com/philipmostert/pointedsdms
+	shallow = true
+	registered = true
